adding chat bubbles

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -65,6 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:background="@drawable/background_progress_bar"
+        android:padding="8dp"
         android:visibility="gone" />
 
 </RelativeLayout>
